rollouts/blue-green/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: blue-green-preview.dev.argoproj.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: bluegreen-demo-preview
            port: 
              number: 80
          # serviceName: bluegreen-demo-preview
          # servicePort: 80
